Correction version mobile

--- a/braldahim-static/public/css/braldahim.css
+++ b/braldahim-static/public/css/braldahim.css
@@ -2021,11 +2021,6 @@ divfrise {
 /* ************************* Vue ****************** */
 /* ************************************************ */
 	
-#vuedetails_interne {
-	min-height:280px;	
-}
-
-
 #boussole {
 	float: right;
 }
